--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "author": "rmilinda@gmail.com",
   "dependencies": {
     "react-native-slider": "^0.11.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.1.1"
   },
   "repository": {
     "type": "git",
