--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-vlc-media-player",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "React native media player for video streaming and playing. Supports RTSP,RTMP and other protocols supported by VLC player",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,8 @@
   "author": "rmilinda@gmail.com",
   "dependencies": {
     "react-native-slider": "^0.11.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.1.1"
   },
   "repository": {
     "type": "git",
